--- a/wibb-ws/www/index.html
+++ b/wibb-ws/www/index.html
@@ -1,3 +1,37 @@
 <html>
-    <h1>Welcome to Wibb</h1>
+    <head>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+        <link rel="stylesheet" href="style.css">
+    
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+   
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+        <script src="script.js"></script>
+    </head>
+    <body>
+        <div class="container">
+            <div class="jumbotron">
+                <p class="lead">Welcome to</p>
+                <h1>Wibb</h1>
+            </div>
+            <h2 class="lead">Supported Beers</h2>
+            <ul class="list-group list-group-horizontal overflow-hidden" id="list-beers">
+<!--                 <li class="list-group-item list-group-item-action horizontal-list-item-content">
+                    <img class="w-100" src="res/img/beer/goesser.png">
+                    <p class="text-center lead">G&ouml;sser</p>
+                </li> -->
+            </ul>
+            <h2 class="lead">Supported Stores</h2>
+            <ul class="list-group list-group-horizontal overflow-hidden" id="list-stores">
+<!--                 <li class="list-group-item list-group-item-action horizontal-list-item-content">
+                    <img class="w-100" src="res/img/store/Spar.png">
+                    <p class="text-center lead">Spar</p>
+                </li> -->
+            </ul>
+        </div>
+    </body>
 </html>
