--- a/wibb-ws/www/index.html
+++ b/wibb-ws/www/index.html
@@ -1,37 +1,94 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-        <link rel="stylesheet" href="style.css">
-    
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-   
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-        <script src="script.js"></script>
-    </head>
-    <body>
-        <div class="container">
-            <div class="jumbotron">
-                <p class="lead">Welcome to</p>
-                <h1>Wibb</h1>
-            </div>
-            <h2 class="lead">Supported Beers</h2>
-            <ul class="list-group list-group-horizontal overflow-hidden" id="list-beers">
-<!--                 <li class="list-group-item list-group-item-action horizontal-list-item-content">
-                    <img class="w-100" src="res/img/beer/goesser.png">
-                    <p class="text-center lead">G&ouml;sser</p>
-                </li> -->
-            </ul>
-            <h2 class="lead">Supported Stores</h2>
-            <ul class="list-group list-group-horizontal overflow-hidden" id="list-stores">
-<!--                 <li class="list-group-item list-group-item-action horizontal-list-item-content">
-                    <img class="w-100" src="res/img/store/Spar.png">
-                    <p class="text-center lead">Spar</p>
-                </li> -->
-            </ul>
+  <link rel="stylesheet" href="style.css">
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+  </script>
+
+
+
+  <script src="script.js"></script>
+</head>
+
+<body>
+  <div class="container">
+    <div class="jumbotron">
+      <h1>Wibb</h1>
+    </div>
+    <nav class="navbar navbar-expand navbar-light bg-light">
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="page-header">
+      <h2>Current Offers</h1>
+    </div>
+    <ul class="list-group" id="list-offers">
+      <!--                 <li class="list-group-item list-group-item-action horizontal-list-item-content">
+                                    <img class="w-100" src="res/img/store/Spar.png">
+                                    <p class="text-center lead">Spar</p>
+                                </li> -->
+    </ul>
+    <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">add Offer</button>
+  </div>
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Add Offer</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
-    </body>
+        <div class="modal-body">
+          <div class="form-group">
+            <label for="input_beer">Beer</label>
+            <select class="form-control" id="input_beer" name="beer">
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="input_store">Store</label>
+            <select class="form-control" id="input_store" name="store">
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="input_price">Price</label>
+            <input type="number" class="form-control" id="input_price" name="price">
+          </div>
+          <div class="form-group">
+            <label for="input_startDate">From</label>
+            <input type="date" class="form-control" id="input_startDate" name="startDate">
+          </div>
+          <div class="form-group">
+            <label for="input_endDate">Until</label>
+            <input type="date" class="form-control" id="input_endDate" name="endDate">
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" id="button_addOffer">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
