--- a/wibb-ws/www/index.html
+++ b/wibb-ws/www/index.html
@@ -40,12 +40,24 @@
     <div class="page-header">
       <h2>Current Offers</h1>
     </div>
-    <ul class="list-group" id="list-offers">
-      <!--                 <li class="list-group-item list-group-item-action horizontal-list-item-content">
+   <!--  <ul class="list-group" id="list-offers">
+                       <li class="list-group-item list-group-item-action horizontal-list-item-content">
                                     <img class="w-100" src="res/img/store/Spar.png">
                                     <p class="text-center lead">Spar</p>
-                                </li> -->
-    </ul>
+                                </li> 
+    </ul> -->
+    <table class="table table-hover" id="table-offers">
+      <tr>
+        <th>Beer</th>
+        <th>Store</th>
+        <th>Price</th>
+      </tr>
+      <!-- <tr>
+        <td class="align-middle"><img src="res/img/beer/goesser.png" height="40px"> Gösser</th>
+        <td class="align-middle">at Billa <img src="res/img/store/billa.png" height="40px"></th>
+        <td class="align-middle"><h4 class="font-weight-bold">20€</h4></th>
+      </tr> -->
+    </table>
     <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">add Offer</button>
   </div>
   <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
